NXP-5847 - Nuxeo java launcher; finished Tomcat server management (start,stop,status,restart,startbg,restartbg,console)